--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
             content="Ethan Ng is a software engineer who loves designing and building applications."
             data-react-helmet="true"
         />
-        <meta name="google" content="notranslate" />
+        <meta name="google" content="notranprimary" />
         <meta http-equiv="Content-Language" content="en" />
         <link rel="icon" href="https://ethanng.dev/favicon.ico" data-react-helmet="true" />
         <meta name="theme-color" content="#e8313f" data-react-helmet="true" />
