--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="Content-Language" content="en" />
         <link
             rel="icon"
-            href="https://ethanng.dev/favicon.ico"
+            href="https://ethanng.dev/favicon.svg"
             data-react-helmet="true"
         />
         <meta name="theme-color" content="#e8313f" data-react-helmet="true" />
@@ -25,7 +25,7 @@
         />
         <link
             rel="apple-touch-icon"
-            href="https://ethanng.dev/favicon.ico"
+            href="https://ethanng.dev/favicon.svg"
             data-react-helmet="true"
         />
         <link
